--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <!--CV DOWNLOAD BUTTON-->
         <div class="w3-container w3-padding-16">
-          <a href="./CV_Risto_Lahteenkorva_SWDL.pdf" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large" target="_blank" download="CV_Risto_Lahteenkorva_SWDL.pdf">
+          <a href="./CV_Risto_Lähteenkorva_2025_EN.pdf" class="w3-amber w3-hover-amber w3-button w3-round-small w3-hover-deep-orange w3-padding-large" target="_blank" download="CV_Risto_Lahteenkorva_SWDL.pdf">
             <i data-feather="arrow-down" style="vertical-align: -0.35em;"></i>
             <span class="w3-margin-left download-text">DOWNLOAD CV</span>
           </a>
@@ -101,7 +101,7 @@
         <div class="content-container w3-margin-top-2">
           <!--HOME SECTION-->
           <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
-            <p hidden style="font-style: italic; font-size:x-large;">"The mind is the limit. Only things that can be imagined are possible to achieve"</p>
+            <p hidden style="font-style: italic; font-size:x-large;">"The mind is not the limit. Only things that can be imagined are possible to achieve"</p>
             <h1>Risto Lähteenkorva</h2>
             <h2>Developer</h3>
             <p></p>
@@ -111,7 +111,7 @@
           <div id="about" class="w3-container w3-margin-top-20-percent w3-cursive w3-large">
             <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">ABOUT</h2>
             <p class="w3-margin-top-2"> 
-              Aspiring software developer, mainly interested about IoT and Full Stack development. 
+              Aspiring software developer, mainly interested about IoT development. 
               This is demo template for using AI-chatbot in CV. 
               Please make more detailed questions about my work history. Bot will answer as it would be me.
             </p>
